src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__remove_property_initial.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: ROOT
class_name: ROOT
properties:
  Foo:
    "!String": Should be removed
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  relevant_paths: []
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
children: []
