src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__set_name_and_class_name.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: "Hello, world!"
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  relevant_paths: []
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
children: []
